nav correction mobile

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -106,7 +106,7 @@ h1{
   text-align:center;
 }
 .nav-spacer{
-  width:25px;
+  width:15px;
 }
 .nav-item a{
   font-size: 1em;
